--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,7 @@ jobs:
         run: make build
 
       - name: make test
-        run: make test-int-coverage
+        run: make test-coverage
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v1.0.2
